(executable
 (libraries core yojson github github.unix cryptoss)
 (modules crunch)
 (preprocess
  (pps ppx_sexp_conv ppx_let))
 (name crunch))

(executable
 (libraries core)
 (modules recover record)
 (name recover))

(alias
 (name DEFAULT)
 (deps crunch.exe))

(alias
 (name DEFAULT)
 (deps recover.exe))
